--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 body {
   display: grid;
   place-items: center;
+  background: lightblue;
 }
 
 h1 {
@@ -13,7 +14,7 @@ h1 {
 }
 
 a {
-  color: lightgray;
+  color: red;
   text-decoration: none;
 }
 
