--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 main {
   width: 375px;
   height: 812px;
-  background: url("images/background.svg");
+  background: url("https://gist.githubusercontent.com/SousaPedro11/cc55ff6e5e134ce6f8a8515b0b02d740/raw/ad18490fb965e566a391765206c3b662579f449f/background.svg?sanitize=true");
 }
 
 .container {
