fix(username): Ajuste de id no css

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ ul {
   justify-content: center;
 }
 
-#name {
+#userName {
   /* background: linear-gradient(60deg, #ff008e, #ffcd1e, #23a6d5, #23d591); */
   background: linear-gradient(
     60deg,
