--- a/style.css
+++ b/style.css
@@ -197,6 +197,12 @@ a {
   align-items: center;
 }
 
+a:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
 p {
   margin-top: 2rem;
 }
